updating for checking changes

--- a/test_page/form.html
+++ b/test_page/form.html
@@ -11,7 +11,7 @@
         <link href="css/bootstrap-formhelpers.min.css" rel="stylesheet" media="screen">
         <link rel="stylesheet" href="css/formstyle.css">
     </head>
-    <body onload="init();">
+    <body>
         <div id="form">
             <div class="container" id="heading">
                 <nav class="navbar navbar-light bg-faded">
@@ -24,25 +24,66 @@
                     <div class="col-xs-0 col-sm-1 col-md-1 col-lg-1">
                     </div>
                     <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <h3>Software Development Engineer in Test II-Last Mile</h3>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <h5>at Cozee <a href="#" title="">(View all jobs)</a></h5>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <b>Software Development Engineer Test II</b><br>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <b>Location: Bangalore,</b><br>
+                        </div>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <b>Position Background:</b><br>
                         At Cozee we approach testing differently -- we are testing, and breaking, code constantly and help rebuild it better. Software Engineers in Test (SDET) devise smart testing strategies and write code to examine and validate large-scale software development and deployments. As an SDET, you would partner with software developers to create and code tests during product development. Your primary responsibilities are
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <ul>
                             <li>To mitigate potential quality risks across SDLC through pragmatic test coverage</li>
                             <li>Create repeatability in testing through automation</li>
                             <li>Enable delivery through good planning, proactive communication and timely execution</li>
                         </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         At Cozee, high focus on Impact and Ownership allows for freedom to each to experiment and innovate. The pride is when you see the impact of what you have created. The ability to see what your contribution does to the business is a rare experience, add to that the fact that the impact of it is felt by your friends and family in India - the experience is extremely gratifying.
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <br><b>Responsibilities:</b><br>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <ul>
                             <li>You are responsible for various dimensions of testing (functional/non-functional (performance, scalability, adverse etc.), ensuring quality experiences to our customers.</li>
                             <li>With your extensive technical expertise and judgment, you are an integrated part of the software development team and define, document, analyze, perform, and automate tests for products. You identify functional /non-functional issues and come up with creative resolutions.</li>
                             <li>You are responsible for adhering to best QA practices and improve the Quality of the products continuously</li>
                             <li>You are responsible to create repeatability that enable and validate high quality releases at a fast pace</li>
                         </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <b>Must Have Skills:</b><br>
                         <ul>
                             <li>You have a strong technical background, are detail driven and have excellent problem solving abilities</li>
@@ -54,11 +95,17 @@
                             <li>Experience in working on Linux based environments.</li>
                             <li>Experience in test automation tools like junit, testng, phpunit, webdriver, jmeter, SoapUI etc</li>
                         </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                         <b>Desired Skills:</b><br>
                         <ul>
                             <li>Good understating of Continuous Integration/Delivery</li>
                             <li>Contribution to open source projects in the Automation/QA is a plus</li>
                         </ul>
+                        </div>
+                    </div>
                     </div>
                     <div class="col-xs-0 col-sm-1 col-md-1 col-lg-1">
                     </div>
@@ -94,7 +141,8 @@
                                 <label for="phone"  style="color:black;"  class="col-sm-2 form-control-label">Phone No.
                                 <span style="color:red;">*</span></label>
                                 <div class="col-sm-4">
-                                    <select class="form-control" id="countryCode" style="border-color:#CCC;">
+                                    <select class="form-control" id="countryCode" style="border-color:#CCC;" onfocus="init();">
+                                    <option value="+91">India (+91)</option>
                                     </select>
                                 </div>
                                 <div class="col-sm-6">
@@ -113,10 +161,9 @@
                                     <p class="text-muted">File Format: pdf or docx</p>
                                 </div>
                             </div>
+                            <hr>
                             <!-- Cover letter -->
                             <div class="form-group row" id="cover_letter_class">
-                                <label for="coverletter"  style="color:black;"  class="col-sm-2 form-control-label"></label>
-                                <div class="col-sm-10">
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                             Why do you want to join Cozee ? <span style="color:red;">*</span>
@@ -128,8 +175,6 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <hr>
                             <!-- Linkedin Profile -->
                             <div class="form-group row" id="URLlinkedin_class">
                                 <div class="row">
