--- a/test_page/animated_slide.html
+++ b/test_page/animated_slide.html
@@ -13,6 +13,7 @@
 			box-shadow: 0px 0px 1px 1px black;
 			margin-right: -2%;
 			z-index: -999;
+			visibility: hidden;
 		}
 		#imgBlockId1 {
 			box-shadow: 0px 0px 10px 1px black;
@@ -36,10 +37,9 @@
 			box-shadow: 0px 0px 1px 1px black;
 			z-index: -999;
 			margin-left: -2%;
+			visibility: hidden;
 		}
-
 		.imgBlockClass {
-
 			}
 		#slide {
 			/*display: block;*/
