--- a/test_page/index.html
+++ b/test_page/index.html
@@ -17,6 +17,27 @@
 
         <!-- Custom Style Sheet for this page -->
         <link rel="stylesheet" href="css/style.css">
+
+        <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
+<link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
+
+    <style>
+    .owl-carousel {
+
+    }
+    .active {
+    }
+
+    .center {
+
+        box-shadow: 0px 0px 100px 1px black;
+        z-index: 9999;
+    }
+    .item {
+    height: 100%;
+    vertical-align: middle;
+    }
+</style>
     </head>
     <body onload="showStaff(1);">
         <!------------------------- welcome slide ---------------------------->
@@ -120,7 +141,7 @@
             </div>
             <div id="slide-3-image-slide">
 
-            <div class="slide-class">
+<!--             <div class="slide-class">
                 <div class="image-cover">
                     <img  src="image/slide1.jpg" alt="slide 1">
                 </div>
@@ -130,8 +151,19 @@
                 <div class="image-cover">
                     <img  src="image/slide3.jpg" alt="slide 1">
                 </div>
-                </div>
+                </div> -->
+                <br><br>
+                <div class="container-fluid">
+
+            <div id="owl" class="owl-carousel">
+            <div class="item"><img class="img-responsive" src="image/slide1.jpg" alt="pic" ></div>
+            <div class="item"><img class="img-responsive"src="image/slide6.jpg" alt="pic" ></div>
+            <div class="item"><img class="img-responsive"src="image/slide3.jpg" alt="pic" ></div>
+            <div class="item"><img class="img-responsive"src="image/slide4.jpg" alt="pic" ></div>
+            <div class="item"><img class="img-responsive"src="image/slide5.jpg" alt="pic" ></div>
+        </div>
             </div>
+        </div>
             <br><br>
         </div>
         <div class="container-fluid">
@@ -256,6 +288,8 @@
         <script src="js/holder.min.js"></script>
         <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
         <script src="js/ie10-viewport-bug-workaround.js"></script>
+
+                <script src="owlcarousel/owl.carousel.min.js"></script>
         <svg xmlns="http://www.w3.org/2000/svg" width="500" height="500" viewBox="0 0 500 500" preserveAspectRatio="none" style="display: none; visibility: hidden; position: absolute; top: -100%; left: -100%;">
         <defs>
         <style type="text/css"></style>
@@ -264,15 +298,38 @@
         </svg>
                 <script>
         $(document).ready(function(){
-            $('.slide-class').slick({
-                // settings Key-value pair
-                slidesToShow: 1,
-                centerMode: true,
-                centerPadding: "50px",
-                focusOnSelect: true,
-                variableWidth: true,
-            });
+          $('.owl-carousel').owlCarousel({
+                loop:true,
+                margin: 10,
+                nav:true,
+                center: true,
+                nav:false,
+                stagePadding: 340, // to show how much content will be visible
+                responsive:{    // screen size and respective no. of item that you want to see.
+                    0:{
+                        items:1
+                    },
+                    600:{
+                        items:1
+                    },
+                    1000:{
+                        items:1
+                    }
+                }
+            })
         });
+
+
+        // $(document).ready(function(){
+        //     $('.slide-class').slick({
+        //         // settings Key-value pair
+        //         slidesToShow: 1,
+        //         centerMode: true,
+        //         centerPadding: "50px",
+        //         focusOnSelect: true,
+        //         variableWidth: true,
+        //     });
+        // });
 
         function showStaff(staffID) {
             var staff_large_photo = document.getElementById("staff-large");
