--- a/test_page/t-rex.html
+++ b/test_page/t-rex.html
@@ -6,6 +6,7 @@
 <!--         <link rel="stylesheet" href="owl-carousel/owl.carousel.css">
         Default Theme
         <link rel="stylesheet" href="owl-carousel/owl.theme.css"> -->
+       <!-- <link rel="stylesheet" href="owlcarousel/docs.theme.min.css"> -->
         <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
 <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
 
@@ -13,11 +14,7 @@
 	.owl-carousel {
 		overflow: visible;
 	}
-	.active {
-	}
-
 	.center {
-
 		box-shadow: 0px 0px 50px 10px black;
 		z-index: 9999;
 	}
@@ -43,7 +40,6 @@
 			    margin: 10,
 			    nav:true,
 			    center: true,
-			    nav:false,
 			    stagePadding: 410, // to show how much content will be visible
 			    responsive:{    // screen size and respective no. of item that you want to see.
 			        0:{
