updating for checking changes

--- a/test_page/index.html
+++ b/test_page/index.html
@@ -301,6 +301,7 @@
           $('.owl-carousel').owlCarousel({
                 loop:true,
                 margin: 10,
+                items:3,
                 center: true,
                 nav:false,
                 stagePadding: 340, // to show how much content will be visible
