--- a/test_page/index.html
+++ b/test_page/index.html
@@ -12,8 +12,7 @@
         <!-- Stylesheet for awesome font -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-        <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-        <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+
 
         <!-- Custom Style Sheet for this page -->
         <link rel="stylesheet" href="css/style.css">
@@ -29,14 +28,10 @@
     }
 
     .center {
-
         box-shadow: 0px 0px 100px 1px black;
         z-index: 9999;
     }
-    .item {
-    height: 100%;
-    vertical-align: middle;
-    }
+
 </style>
     </head>
     <body onload="showStaff(1);">
@@ -153,7 +148,7 @@
                 </div>
                 </div> -->
                 <br><br>
-                <div class="container-fluid">
+                <!-- <div class="container-fluid"> -->
 
             <div id="owl" class="owl-carousel">
             <div class="item"><img class="img-responsive" src="image/slide1.jpg" alt="pic" ></div>
@@ -162,7 +157,7 @@
             <div class="item"><img class="img-responsive"src="image/slide4.jpg" alt="pic" ></div>
             <div class="item"><img class="img-responsive"src="image/slide5.jpg" alt="pic" ></div>
         </div>
-            </div>
+            <!-- </div> -->
         </div>
             <br><br>
         </div>
