--- a/test_page/t-rex.html
+++ b/test_page/t-rex.html
@@ -6,7 +6,7 @@
 <!--         <link rel="stylesheet" href="owl-carousel/owl.carousel.css">
         Default Theme
         <link rel="stylesheet" href="owl-carousel/owl.theme.css"> -->
-       <!-- <link rel="stylesheet" href="owlcarousel/docs.theme.min.css"> -->
+       <link rel="stylesheet" href="owlcarousel/docs.theme.min.css">
         <link rel="stylesheet" href="owlcarousel/owl.carousel.min.css">
 <link rel="stylesheet" href="owlcarousel/owl.theme.default.min.css">
 
