updating for checking changes

--- a/test_page/form.html
+++ b/test_page/form.html
@@ -12,12 +12,19 @@
         <link rel="stylesheet" href="css/formstyle.css">
     </head>
     <body>
-        <div id="form">
-            <div class="container" id="heading">
-                <nav class="navbar navbar-light bg-faded">
-                    <a class="navbar-brand" href="#"><img src="image/logo.png" width="14%" alt=""></a>
-                </nav>
-                <h2>Job Opening</h2>
+        <!-- <div id="form"> -->
+        <div class="container" style="background:#354458;">
+                    <nav class="navbar navbar-light bg-faded">
+                        <a class="navbar-brand" href="#"><img src="image/logo.png" width="14%" alt=""></a>
+                    </nav>
+        </div>
+        <div class="container" id="form">
+
+            <div class="row" id="heading">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-xs-center">
+                <br>
+                    <h2>Job Opening</h2>
+                </div>
             </div>
             <div class="container">
                 <div class="row jd">
@@ -226,6 +233,7 @@
                 </div>
             </div>
         </div>
+        <!-- </div> -->
         <script src="script.js"></script>
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
