updating for checking changes

--- a/test_page/index.html
+++ b/test_page/index.html
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div id="slide-1-button" class="text-xs-center">
-                <a class="btn btn-secondary slide-1-button" href="#" role="button">Current opening postions</a>
+                <a class="btn btn-secondary slide-1-button" href="#slide-5" role="button">Current opening postions</a>
             </div>
             <br><br><br><br>
         </div>
