updating for checking changes

--- a/test_page/index.html
+++ b/test_page/index.html
@@ -14,12 +14,24 @@
     <!-- Stylesheet for awesome font -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-    <!-- Custom Style Sheet for this page -->
+    <!-- Custom Style Sheet for this page -->    .item > img {
+        height: 100px;
+    }
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
 
     <style>
+    .owl-item {
+    }
+    .item {
+        margin-top: auto;
+        margin-bottom: 0px;
+        height: 500px;
+    }
+    .center {
+        box-shadow: 0px 0px 300px 50px black;
+    }
     </style>
 </head>
 
