updating for checking changes

--- a/test_page/index.html
+++ b/test_page/index.html
@@ -14,9 +14,7 @@
     <!-- Stylesheet for awesome font -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-    <!-- Custom Style Sheet for this page -->    .item > img {
-        height: 100px;
-    }
+    <!-- Custom Style Sheet for this page -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
