--- a/test_page/index.html
+++ b/test_page/index.html
@@ -27,8 +27,10 @@
         margin-bottom: 0px;
         height: 500px;
     }
-    .center {
+    .center > img {
         box-shadow: 0px 0px 300px 50px black;
+        /*min-height: 100%;*/
+        height: 600px;
     }
     </style>
 </head>
@@ -158,7 +160,6 @@
     <div class="container-fluid">
         <!------------------------- staff testimonial -------------------->
         <div id="slide-4">
-
             <div class="container">
                 <div class="row">
                     <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
@@ -257,7 +258,8 @@
         </div>
     </div>
     <!---------------------------- Script Files -------------------------->
-    <!-- Fix for uncaught error for tether.js -->
+    <!-- Fix for uncaught error for tether.js -->>
+
     <script src="http://github.hubspot.com/tether/dist/js/tether.js"></script>
 
     <!-- Offline/Online version of JQuery -->
