--- a/test_page/index.html
+++ b/test_page/index.html
@@ -21,11 +21,13 @@
 
     <style>
     .owl-item {
+        /*overflow: visible;*/
     }
     .item {
         margin-top: auto;
         margin-bottom: 0px;
-        height: 500px;
+        /*height: 500px;*/
+        height: 80%;
     }
     .center > img {
         box-shadow: 0px 0px 300px 50px black;
@@ -143,7 +145,7 @@
             <div id="owl" class="owl-carousel">
                 <div class="item"><img class="img-responsive" src="image/slide1.jpg" alt="pic">
                 </div>
-                <div class="item"><img class="img-responsive" src="image/slide6.jpg" alt="pic">
+                <div class="item"><img class="img-responsive" src="image/a3.jpg" alt="pic">
                 </div>
                 <div class="item"><img class="img-responsive" src="image/slide3.jpg" alt="pic">
                 </div>
