--- a/test_page/index.html
+++ b/test_page/index.html
@@ -164,8 +164,26 @@
         <!------------------------- staff testimonial -------------------->
         <div id="slide-4">
             <div class="container">
+            <div class="row">
+                    <div class="col-xs-3 col-sm-0 col-md-0 col-lg-0">
+                    <div class="staff-thumbnail">
+                            <img id="staff1thumbnail" src="image/staff1.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(1);" alt="staff 1">
+                        </div>
+                        </div>
+                        <div class="col-xs-3 col-sm-0 col-md-0 col-lg-0">
+                        <div class="staff-thumbnail">
+                            <img id="staff2thumbnail" src="image/staff2.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(2);" alt="staff 1">
+                        </div>
+                        </div>
+                        <div class="col-xs-3 col-sm-0 col-md-0 col-lg-0">
+                        <div class="  staff-thumbnail">
+                            <img id="staff3thumbnail" src="image/staff3.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(3);" alt="staff 1">
+                        </div>
+                    </div>
+            </div>
+
                 <div class="row">
-                    <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-xs-0 col-sm-2 col-md-2 col-lg-2">
                         <!-- thumbnail of staff -->
                         <div class="row staff-thumbnail">
                             <img id="staff1thumbnail" src="image/staff1.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(1);" alt="staff 1">
