--- a/test_page/index.html
+++ b/test_page/index.html
@@ -176,7 +176,7 @@
                             <img id="staff3thumbnail" src="image/staff3.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(3);" alt="staff 1">
                         </div>
                     </div>
-                    <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
+                    <div class="col-xs-12 col-xs-offset-2 col-sm-10 col-md-10 col-lg-10">
                         <!-- description of that particular staff -->
                         <div class="row">
                             <div class="col-xs-1 col-sm-6 col-md-6 col-lg-6" style="position: relative; left: 0; top: 0;">
