--- a/test_page/index.html
+++ b/test_page/index.html
@@ -163,8 +163,24 @@
         <!------------------------- staff testimonial -------------------->
         <div id="slide-4">
             <div class="container">
+            <div class="row">
+                <div class="col-xs-12 hidden-sm-up">
                 <div class="row">
-                    <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-xs-4">
+                        <img id="staff1thumbnail" src="image/staff1.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(1);" alt="staff 1">
+                    </div>
+                    <div class="col-xs-4">
+                        <img id="staff2thumbnail" src="image/staff2.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(2);" alt="staff 1">
+                    </div>
+                    <div class="col-xs-4">
+                        <img id="staff3thumbnail" src="image/staff3.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(3);" alt="staff 1">
+                    </div>
+                </div>
+                <br>
+                </div>
+            </div>
+                <div class="row">
+                    <div class="hidden-sm-down col-sm-2 col-md-2 col-lg-2">
                         <!-- thumbnail of staff -->
                         <div class="row staff-thumbnail">
                             <img id="staff1thumbnail" src="image/staff1.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(1);" alt="staff 1">
@@ -176,10 +192,10 @@
                             <img id="staff3thumbnail" src="image/staff3.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(3);" alt="staff 1">
                         </div>
                     </div>
-                    <div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+                    <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
                         <!-- description of that particular staff -->
                         <div class="row">
-                            <div class="hidden-md-down col-sm-6 col-md-6 col-lg-6" style="position: relative; left: 0; top: 0;">
+                            <div class="hidden-sm-down col-sm-6 col-md-6 col-lg-6" style="position: relative; left: 0; top: 0;">
                                 <!-- Staff bigger image -->
                                 <img id="staff-large" visibility="visible" src="image/staff1_large.jpg" class="img-thumbnail img-responsive slide-4-staff-large" alt="">
                             </div>
