--- a/test_page/index.html
+++ b/test_page/index.html
@@ -180,7 +180,7 @@
                 </div>
             </div>
                 <div class="row">
-                    <div class="hidden-sm-down col-sm-2 col-md-2 col-lg-2">
+                    <div class="hidden-xs-down col-sm-2 col-md-2 col-lg-2">
                         <!-- thumbnail of staff -->
                         <div class="row staff-thumbnail">
                             <img id="staff1thumbnail" src="image/staff1.jpg" class="img-thumbnail img-responsive slide-4-staff" onclick="showStaff(1);" alt="staff 1">
@@ -195,7 +195,7 @@
                     <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
                         <!-- description of that particular staff -->
                         <div class="row">
-                            <div class="hidden-sm-down col-sm-6 col-md-6 col-lg-6" style="position: relative; left: 0; top: 0;">
+                            <div class="hidden-xs-down col-sm-6 col-md-6 col-lg-6" style="position: relative; left: 0; top: 0;">
                                 <!-- Staff bigger image -->
                                 <img id="staff-large" visibility="visible" src="image/staff1_large.jpg" class="img-thumbnail img-responsive slide-4-staff-large" alt="">
                             </div>
