--- a/test_page/index.html
+++ b/test_page/index.html
@@ -40,7 +40,7 @@
 <body onload="showStaff(1);">
     <!------------------------- welcome slide ---------------------------->
     <div id="slide-1">
-        <div class="row">
+        <div class="row better-row">
             <div class="text-xs-center
                     col-xs-12 col-xs-offset-0
                     col-sm-10 col-sm-offset-1
@@ -50,13 +50,13 @@
                 <h1 class="display-3"> Work at Cozee</h1>
             </div>
         </div>
-        <div class="row">
+        <div class="row  better-row">
             <div class="text-xs-center
                     col-xs-10 col-xs-offset-1
                     col-sm-10 col-sm-offset-1
                     col-md-8 col-md-offset-2
                     col-lg-8 col-lg-offset-2
-                    col-xl-6 col-xl-offset-3" id="slide-1-msg">
+                    col-xl-6 col-xl-offset-3" id="slide-1-msg" style="padding-left:0px;padding-right:0px;">
 <h5>We're looking for talented people who care about solving hard problems and building technology that people love to use</h5>
             </div>
         </div>
