--- a/test_page/index.html
+++ b/test_page/index.html
@@ -70,7 +70,7 @@
     </div>
     <!--------------------------- mission slide -------------------------->
     <div id="slide-2">
-        <div class="row">
+        <div class="row better-row">
             <div class="text-xs-center
                     col-xs-8 col-xs-offset-2
                     col-sm-8 col-sm-offset-2
@@ -91,7 +91,7 @@
     </div>
     <!--------------------------------- culture slide -------------------->
     <div id="slide-3">
-        <div class="row">
+        <div class="row better-row">
             <div class="text-xs-center
                     col-xs-8 col-xs-offset-2
                     col-sm-8 col-sm-offset-2
