--- a/test_page/index.html
+++ b/test_page/index.html
@@ -40,7 +40,7 @@
 <body onload="showStaff(1);">
     <!------------------------- welcome slide ---------------------------->
     <div id="slide-1">
-        <div class="row better-row">
+        <div class="row">
             <div class="text-xs-center
                     col-xs-12 col-xs-offset-0
                     col-sm-10 col-sm-offset-1
@@ -50,7 +50,7 @@
                 <h1 class="display-3"> Work at Cozee</h1>
             </div>
         </div>
-        <div class="row  better-row">
+        <div class="row better-row">
             <div class="text-xs-center
                     col-xs-10 col-xs-offset-1
                     col-sm-10 col-sm-offset-1
