--- a/test_page/index.html
+++ b/test_page/index.html
@@ -63,14 +63,11 @@
         <div id="slide-1-button" class="text-xs-center">
             <a class="btn btn-secondary slide-1-button" href="#slide-5" role="button">Current opening postions</a>
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
+
     </div>
     <!--------------------------- mission slide -------------------------->
     <div id="slide-2">
-        <div class="row better-row">
+        <div class="row" style="margin-left: 0px !important;margin-right: 0px !important;">
             <div class="text-xs-center
                     col-xs-8 col-xs-offset-2
                     col-sm-8 col-sm-offset-2
@@ -79,7 +76,7 @@
                 <h1 class="display-5"> Cozee is ... </h1>
             </div>
         </div>
-        <div class="row">
+        <div class="row" style="margin-left: 0px !important;margin-right: 0px !important;">
             <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-6 col-lg-offset-3 text-xs-justify text-sm-justify text-md-justify text-lg-center" id="slide-2-msg">
                 ... a technology company that enables on-demand delivery to empower local economies. We're building a company people love. We help owner businesses grow and provide cozee homes to tenant.
                 <br>
