updating for checking changes

--- a/test_page/index.html
+++ b/test_page/index.html
@@ -88,7 +88,7 @@
     </div>
     <!--------------------------------- culture slide -------------------->
     <div id="slide-3">
-        <div class="row better-row">
+        <div class="row" style="margin-left: 0px !important;margin-right: 0px !important;">
             <div class="text-xs-center
                     col-xs-8 col-xs-offset-2
                     col-sm-8 col-sm-offset-2
