--- a/test_page/index.html
+++ b/test_page/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -18,7 +19,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
-
     <style>
     .owl-item {
         /*overflow: visible;*/
@@ -67,20 +67,19 @@
     </div>
     <!--------------------------- mission slide -------------------------->
     <div id="slide-2">
-        <div class="row" style="margin-left: 0px !important;margin-right: 0px !important;">
+        <div class="row slide-heading" style="margin-left: 0px !important;margin-right: 0px !important;">
             <div class="text-xs-center
-                    col-xs-8 col-xs-offset-2
-                    col-sm-8 col-sm-offset-2
+                    col-xs-12 col-xs-offset-0
+                    col-sm-10 col-sm-offset-1
                     col-md-8 col-md-offset-2
-                    col-lg-6 col-lg-offset-3" id="slide-2-heading">
-                <h1 class="display-5"> Cozee is ... </h1>
+                    col-lg-8 col-lg-offset-2
+                    col-xl-6 col-xl-offset-3">
+                <h2> Cozee is </h2>
             </div>
         </div>
         <div class="row" style="margin-left: 0px !important;margin-right: 0px !important;">
-            <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-6 col-lg-offset-3 text-xs-justify text-sm-justify text-md-justify text-lg-center" id="slide-2-msg">
-                ... a technology company that enables on-demand delivery to empower local economies. We're building a company people love. We help owner businesses grow and provide cozee homes to tenant.
-                <br>
-                <br> We're looking to expand the founding team with talented people who are excited about our mission to build out the world best cozee homes providers.
+            <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2 text-xs-justify text-sm-justify text-md-justify text-lg-justify" id="slide-2-msg">
+                a technology company that enables on-demand delivery to empower local economies. We're building a company people love. We help owner businesses grow and provide cozee homes to tenant. We're looking to expand the founding team with talented people who are excited about our mission to build out the world best cozee homes providers.
                 <br>
                 <br> Cozee is based in Bengalore, India.
             </div>
@@ -88,13 +87,14 @@
     </div>
     <!--------------------------------- culture slide -------------------->
     <div id="slide-3">
-        <div class="row" style="margin-left: 0px !important;margin-right: 0px !important;">
+        <div class="row slide-heading" id="slide-3-heading" style="margin-left: 0px !important;margin-right: 0px !important;">
             <div class="text-xs-center
-                    col-xs-8 col-xs-offset-2
-                    col-sm-8 col-sm-offset-2
+                    col-xs-12 col-xs-offset-0
+                    col-sm-10 col-sm-offset-1
                     col-md-8 col-md-offset-2
-                    col-lg-6 col-lg-offset-3" id="slide-3-heading">
-                <h1 class="display-5"> Our Culture </h1>
+                    col-lg-8 col-lg-offset-2
+                    col-xl-6 col-xl-offset-3">
+                <h2> Our Culture </h2>
             </div>
         </div>
         <div id="slide-3-cards">
@@ -159,6 +159,16 @@
     <div class="container-fluid">
         <!------------------------- staff testimonial -------------------->
         <div id="slide-4">
+        <div class="row slide-heading" style="margin-left: 0px !important;margin-right: 0px !important;">
+            <div class="text-xs-center
+                    col-xs-12 col-xs-offset-0
+                    col-sm-10 col-sm-offset-1
+                    col-md-8 col-md-offset-2
+                    col-lg-8 col-lg-offset-2
+                    col-xl-6 col-xl-offset-3">
+                <h2> Meet Our Team </h2>
+            </div>
+        </div>
             <div class="container">
             <div class="row">
                 <div class="col-xs-12 hidden-sm-up">
@@ -209,10 +219,17 @@
         </div>
         <!------------------------- Job opening -------------------------->
         <div id="slide-5">
-            <div class="page-header text-xs-center">
-                <h2>Interested? We’re hiring.</h2>
+        <div class="row slide-heading" id="slide-5-heading" style="margin-left: 0px !important;margin-right: 0px !important;">
+            <div class="text-xs-center
+                    col-xs-12 col-xs-offset-0
+                    col-sm-10 col-sm-offset-1
+                    col-md-8 col-md-offset-2
+                    col-lg-8 col-lg-offset-2
+                    col-xl-6 col-xl-offset-3">
+                <h2> Interested? We’re hiring. </h2>
+                <h5>Please send a cover letter & resume to <a href="mailto:careers@cozee.in?subject=feedback" "email me">careers@cozee.in</a></h5>
             </div>
-            <br>
+        </div>
             <div class="container text-xs-left">
                 <!-- engineer -->
                 <hr>
@@ -271,7 +288,6 @@
             </div>
 
         </div>
-    </div>
     <!---------------------------- Script Files -------------------------->
     <!-- Fix for uncaught error for tether.js -->
 
