--- a/test_page/index.html
+++ b/test_page/index.html
@@ -290,8 +290,6 @@
         <!------------------------- Job opening -------------------------->
         <div id="slide-6">
 
-
-
             <div class="row slide-heading" id="slide-5-heading" style="margin-left: 0px !important;margin-right: 0px !important;">
                 <div class="text-xs-center
                         col-xs-12 col-xs-offset-0
@@ -308,7 +306,7 @@
 
         <div class="container">
 
-            <div class="row">
+            <div class="row" style="margin-left: 0px !important;margin-right: 0px !important;">
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
                 <div class="card card-block text-xs-center job-card">
                     <h4 class="card-title">Front-End Engineer</h4>
