--- a/test_page/index.html
+++ b/test_page/index.html
@@ -217,7 +217,7 @@
 
         </div>
         <!------------------------- Job opening -------------------------->
-        <div id="slide-5">
+<!--         <div id="slide-5">
         <div class="row slide-heading" id="slide-5-heading" style="margin-left: 0px !important;margin-right: 0px !important;">
             <div class="text-xs-center
                     col-xs-12 col-xs-offset-0
@@ -231,7 +231,7 @@
             </div>
         </div>
             <div class="container text-xs-left">
-                <!-- engineer -->
+
                 <hr>
                 <div class="row">
                     <div class="col-xs-3 col-sm-3 col-sm-offset-1 col-md-3 col-lg-3 col-md-offset-2 col-lg-offset-2 slide-5-job-category">
@@ -286,9 +286,10 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
+
         <!------------------------- Job opening -------------------------->
-        <div id="slide-6">
+        <div id="slide-5">
 
             <div class="row slide-heading" id="slide-5-heading" style="margin-left: 0px !important;margin-right: 0px !important;">
                 <div class="text-xs-center
@@ -347,11 +348,6 @@
                     </div>
 
                 </div>
-
-
-
-
-
 
             </div>
 
