updating for checking changes

--- a/test_page/index.html
+++ b/test_page/index.html
@@ -351,13 +351,13 @@
 
             </div>
 
-            <div class="row">
+            <div class="row" style="margin-left: 0px !important;margin-right: 0px !important;">
                 <div class="hidden-md-down col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
                     <p> Think you might be a good fit but don’t see your role listed here? We’d love to hear about what you can bring to our team. Please send a cover letter & resume to <a href="mailto:careers@cozee.in?subject=feedback" "email me">careers@cozee.in</a></p>
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row" style="margin-left: 0px !important;margin-right: 0px !important;">
                 <div class="hidden-md-up col-xs-12 col-sm-12">
 
             <div class="card card-inverse job-extra text-xs-center">
