--- a/test_page/form1.html
+++ b/test_page/form1.html
@@ -21,7 +21,7 @@
         </nav>
 
         <div class="row" id="heading" style="margin-left: 0px !important;margin-right: 0px !important;">
-            <div class="col-xs-11 col-xs-offset-1 col-sm-6 col-sm-offset-6 col-md-12 col-lg-8 col-lg-offset-2">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-10 col-sm-offset-1 col-md-10 col-md-offset-1 col-lg-10 col-lg-offset-1">
                     <h1>Software Development Engineer Test II</h1>
             </div>
         </div>
