--- a/test_page/form1.html
+++ b/test_page/form1.html
@@ -125,10 +125,10 @@
             <div class="container"  id="iform">
                 <hr>
                 <div class="row">
-                    <div class="col-xs-0 col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-xs-0 col-sm-0 col-md-0 col-lg-2">
                     </div>
-                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 jf">
-                        <form>
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 jf">
+                        <form action="" method="POST">
                             <div class="page-header">
                                 <h4>Apply for this job <small class="pull-xs-right"><span style="color:red;">*</span>Required</small></h4>
                             </div>
@@ -219,7 +219,11 @@
                             <hr>
                             <div class="form-group row">
                                 <div class="col-sm-offset-2 col-sm-10">
-                                    <button type="submit" class="btn btn-success pull-xs-right">Submit Application</button>
+                                   <a class="btn btn-primary pull-xs-right"
+                                       href="#iform" onclick="formSubmit();"  role="button">Link</a>
+                                    <!-- <a href="#iform" onclick="submitForm();" class="btn
+                                        btn-success pull-xs-right">Submit
+                                        Application</var> -->
                                 </div>
                             </div>
                         </form>
