--- a/test_page/form1.html
+++ b/test_page/form1.html
@@ -128,7 +128,12 @@
                     <div class="col-xs-0 col-sm-0 col-md-0 col-lg-2">
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 jf">
-                        <form action="" method="POST">
+                        <form
+                        action="mailDetails.php"
+                        name="jobForm"
+                        method="POST"
+                        id="jobForm"
+                        >
                             <div class="page-header">
                                 <h4>Apply for this job <small class="pull-xs-right"><span style="color:red;">*</span>Required</small></h4>
                             </div>
@@ -138,7 +143,11 @@
                                 <label for="name" class="col-sm-2 form-control-label" style="color:black;">Name <span style="color:red;">*</span>
                                 </label>
                                 <div class="col-sm-10">
-                                    <input class="form-control" type="text" onkeydown="restoreStyle('name', 'name_class');" onkeyup="validateName();" onblur="validateName();" id="name" placeholder="">
+                                    <input class="form-control" type="text"
+                                    onkeydown="restoreStyle('name',
+                                    'name_class');" onkeyup="validateName();"
+                                    onblur="validateName();" id="name"
+                                    name="name" placeholder="">
                                 </div>
                             </div>
                             <!-- Email -->
@@ -146,7 +155,11 @@
                                 <label for="inputEmail3" style="color:black;" class="col-sm-2 form-control-label">Email <span style="color:red;">*</span>
                                 </label>
                                 <div class="col-sm-10">
-                                    <input class="form-control" type="email" onkeydown="restoreStyle('email', 'email_class');" onkeyup="validateEmail();" onblur="validateEmail();" id="email" placeholder="">
+                                    <input class="form-control" type="email"
+                                    onkeydown="restoreStyle('email',
+                                    'email_class');" onkeyup="validateEmail();"
+                                    onblur="validateEmail();" id="email"
+                                    name="email" placeholder="">
                                 </div>
                             </div>
                             <!-- Phone number -->
@@ -155,7 +168,8 @@
                                     <span style="color:red;">*</span>
                                 </label>
                                 <div class="col-sm-4">
-                                    <select class="form-control" id="countryCode" style="border-color:#CCC;" onfocus="init();">
+                                    <select class="form-control"
+                                        name="countryCode" id="countryCode" style="border-color:#CCC;" onfocus="init();">
                                         <option value="+91">India (+91)</option>
                                     </select>
                                 </div>
@@ -169,7 +183,8 @@
                                 </label>
                                 <div class="col-sm-6">
                                     <label class="file">
-                                        <input class="form-control" type="file" id="resume" style="opacity:1;" onchange="validateFile();">
+                                        <input class="form-control" type="file"
+                                        id="resume" name="resume"  style="opacity:1;" onchange="validateFile();">
                                     </label>
                                 </div>
                                 <div class="col-sm-4 pull-xs-right">
@@ -186,7 +201,11 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                        <textarea class="form-control" rows="3" onkeydown="restoreStyle('cover_letter', 'cover_letter_class');" onkeyup="validateCoverLetter();" id="cover_letter" onblur="validateCoverLetter();"></textarea>
+                                        <textarea class="form-control" rows="3"
+                                            onkeydown="restoreStyle('cover_letter',
+                                            'cover_letter_class');"
+                                        onkeyup="validateCoverLetter();"
+                                        id="cover_letter" name="coverLetter" onblur="validateCoverLetter();"></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -199,7 +218,15 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                        <input class="form-control" onkeydown="restoreStyle('URLlinkedin', 'URLlinkedin_class');" onkeyup="validateURL('URLlinkedin', 'URLlinkedin_class');" type="text" placeholder="Enter your profile URL" onblur="validateURL('URLlinkedin', 'URLlinkedin_class');" id="URLlinkedin">
+                                        <input class="form-control"
+                                        onkeydown="restoreStyle('URLlinkedin',
+                                        'URLlinkedin_class');"
+                                        onkeyup="validateURL('URLlinkedin',
+                                        'URLlinkedin_class');" type="text"
+                                        placeholder="Enter your profile URL"
+                                        onblur="validateURL('URLlinkedin',
+                                        'URLlinkedin_class');" id="URLlinkedin"
+                                        name="URLlinkedin">
                                     </div>
                                 </div>
                             </div>
@@ -212,18 +239,24 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                        <input class="form-control" onkeyup="validateURL('URLgithub', 'URLgithub_class');" type="text" onkeydown="restoreStyle('URLgithub', 'URLgithub_class');" placeholder="Enter your profile URL" onblur="validateURL('URLgithub', 'URLgithub_class');" id="URLgithub">
+                                        <input class="form-control"
+                                        onkeyup="validateURL('URLgithub',
+                                        'URLgithub_class');" type="text"
+                                        onkeydown="restoreStyle('URLgithub',
+                                        'URLgithub_class');" placeholder="Enter
+                                        your profile URL"
+                                        onblur="validateURL('URLgithub',
+                                        'URLgithub_class');" id="URLgithub"
+                                        name="URLgithub">
                                     </div>
                                 </div>
                             </div>
                             <hr>
                             <div class="form-group row">
                                 <div class="col-sm-offset-2 col-sm-10">
-                                   <a class="btn btn-primary pull-xs-right"
-                                       href="#iform" onclick="formSubmit();"  role="button">Link</a>
-                                    <!-- <a href="#iform" onclick="submitForm();" class="btn
-                                        btn-success pull-xs-right">Submit
-                                        Application</var> -->
+                                   <a class="btn btn-success pull-xs-right"
+                                        onclick="formSubmit();"
+                                        role="button"> Submit Application</a>
                                 </div>
                             </div>
                         </form>
