updating for checking changes

--- a/contact_page/index.html
+++ b/contact_page/index.html
@@ -40,10 +40,10 @@
     }
         #google_map {
             background: #5B458D;
-
+            height: 100vh;
         }
         #contact_form {
-            /*height: 100vh;*/
+            height: 100vh;
         }
         #googlemaps {
             box-shadow: 0px 0px 10px 1px black;
