updating for checking changes

--- a/test_page/form2.html
+++ b/test_page/form2.html
@@ -73,11 +73,9 @@
 
 
 
-            <h3>Software Development Engineer
-
-<!-- Accent-colored raised button with ripple -->
+            <h3>Software Development Engineer<!-- Accent-colored raised button with ripple -->
 <a href="#iform" class="pull-xs-right mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" style="text-decoration: none;">
-  Apply for this position
+Apply for this position
 </a></h3>
 
 
