updating for checking changes

--- a/test_page/form2.html
+++ b/test_page/form2.html
@@ -301,7 +301,38 @@ Apply for this position
 
 
           </div>
+        <div class="mdl-cell mdl-cell--2-col  mdl-cell--hide-tablet mdl-cell--hide-phone" style="z-index: -99;">
+
+
+        <div class="mdl-grid  pull-xs-right">
+          <div class="mdl-cell mdl-cell--12-col  mdl-shadow--4dp  mdl-cell--hide-tablet mdl-cell--hide-phone others-job text-xs-right">
+
+              <div class="list-group">
+                  <a href="#" class="list-group-item disabled">
+                  Current Job Opening
+                  </a>
+                  <a href="#" class="list-group-item active">
+                  Front-End Engineer
+                  </a>
+                  <a href="#" class="list-group-item">Back-End Engineer</a>
+                  <a href="#" class="list-group-item">Account Manager</a>
+                  <a href="#" class="list-group-item">Customer Relation</a>
+                  <a href="#" class="list-group-item">Others</a>
+              </div>
+          </div>
         </div>
+
+
+
+        </div>
+
+
+
+
+
+        </div>
+
+
         <footer class="demo-footer mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
@@ -312,8 +343,8 @@ Apply for this position
           </div>
         </footer>
 
-
       </main>
+
     </div>
 
 <!-- jQuery -->
