updating for checking changes

--- a/test_page/form2.html
+++ b/test_page/form2.html
@@ -65,7 +65,7 @@
 
       <main class="demo-main mdl-layout__content">
         <div class="demo-container mdl-grid">
-          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="mdl-cell mdl-cell--1-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="demo-crumbs mdl-color-text--grey-500">
               Cozee &gt; Careers &gt; Software Development Engineer
@@ -301,10 +301,10 @@ Apply for this position
 
 
           </div>
-        <div class="mdl-cell mdl-cell--2-col  mdl-cell--hide-tablet mdl-cell--hide-phone" style="z-index: -99;">
+        <div class="mdl-cell mdl-cell--3-col  mdl-cell--hide-tablet mdl-cell--hide-phone" style="">
 
 
-        <div class="mdl-grid  pull-xs-right">
+<!--         <div class="mdl-grid  pull-xs-right">
           <div class="mdl-cell mdl-cell--12-col  mdl-shadow--4dp  mdl-cell--hide-tablet mdl-cell--hide-phone others-job text-xs-right">
 
               <div class="list-group">
@@ -321,8 +321,59 @@ Apply for this position
               </div>
           </div>
         </div>
+ -->
+<!--
+<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+  <thead>
+    <tr>
+      <th class="mdl-data-table__cell--non-numeric">Current Job Openings</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">Front-End Engineer</td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">Plywood (Birch)</td>
+    </tr>
+    <tr>
+      <td class="mdl-data-table__cell--non-numeric">Laminate (Gold on Blue)</td>
+    </tr>
+        <tr>
+      <td class="mdl-data-table__cell--non-numeric">Laminate (Gold on Blue)</td>
+    </tr>
+  </tbody>
+</table> -->
 
+<div class="demo-card-square mdl-card mdl-shadow--2dp">
+  <div class="mdl-card__title mdl-card--expand">
+    <h2 class="mdl-card__title-text">Current Job Openings</h2>
+  </div>
+  <div class="mdl-card__actions mdl-card--border">
+    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+      Front-End Engineer
+    </a>
+  </div>
 
+  <div class="mdl-card__actions mdl-card--border">
+    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+    Back-End Engineer
+    </a>
+  </div>
+
+  <div class="mdl-card__actions mdl-card--border">
+    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+      Account Manager
+    </a>
+  </div>
+
+  <div class="mdl-card__actions mdl-card--border">
+    <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+      Customer Relation
+    </a>
+  </div>
+
+</div>
 
         </div>
 
