updating for checking changes

--- a/test_page/jobform.html
+++ b/test_page/jobform.html
@@ -267,8 +267,7 @@ Apply for this position
                                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                                 <input class="form-control" onkeyup="validateURL('URLgithub',
                                         'URLgithub_class');" type="text" onkeydown="restoreStyle('URLgithub',
-                                        'URLgithub_class');" placeholder="Enter
-                                        your profile URL" onblur="validateURL('URLgithub',
+                                        'URLgithub_class');" placeholder="Enter your profile URL" onblur="validateURL('URLgithub',
                                         'URLgithub_class');" id="URLgithub" name="URLgithub">
                                             </div>
                                         </div>
