updating for checking changes

--- a/test_page/jobform.html
+++ b/test_page/jobform.html
@@ -84,7 +84,7 @@
                         </div>
                         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
 <a href="#iform" class="pull-xs-right mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" style="text-decoration: none;">
-Apply for this position
+Apply<!--  for this position -->
 </a>
                         </div>
 
@@ -227,7 +227,7 @@ Apply for this position
                                     </div>
                                     <hr>
                                     <!-- Cover letter -->
-                                    <div class="form-group row" id="cover_letter_class">
+                                    <div class="form-group row better-row" id="cover_letter_class">
                                         <div class="row">
                                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                                 Why do you want to join Cozee ? <span class="required-field-mark">*</span>
@@ -241,7 +241,7 @@ Apply for this position
                                         </div>
                                     </div>
                                     <!-- Linkedin Profile -->
-                                    <div class="form-group row" id="URLlinkedin_class">
+                                    <div class="form-group row better-row" id="URLlinkedin_class">
                                         <div class="row">
                                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                                 Linkedin Profile
@@ -257,7 +257,7 @@ Apply for this position
                                         </div>
                                     </div>
                                     <!-- Github Profile -->
-                                    <div class="form-group row" id="URLgithub_class">
+                                    <div class="form-group row better-row" id="URLgithub_class">
                                         <div class="row">
                                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                                 Github Profile
