updating for checking changes

--- a/test_page/jobform.html
+++ b/test_page/jobform.html
@@ -97,7 +97,7 @@ Apply<!--  for this position -->
 
 
 
-                    <div class="row jd" style="margin-left: 0px !important;margin-right: 0px !important;">
+                    <div class="row jd better-row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -173,7 +173,7 @@ Apply<!--  for this position -->
 
                     <div id="iform">
                         <hr>
-                        <div class="row" style="margin-left: 0px !important;margin-right: 0px !important;">
+                        <div class="row better-row">
                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10 col-lg-offset-1 jf">
                                 <form action="mailDetails.php" name="jobForm" method="POST" id="jobForm">
                                     <div class="page-header">
